<resources>
        <string name="app_name">NAS nano</string>
        <string name="user_pri_service">User Privacy Protocol &amp; Terms of Service</string>
        <string name="protocol_des">Agree to User Privacy &amp; Terms of Service</string>
        <string name="exit">Exit, Close app</string>
        <string name="next">Next</string>
        <string name="title_home">Home</string>
        <string name="total_balance_des">Total Assets</string>
        <string name="quotation_unit_text">&#160;/ Hour</string>
        <string name="important_text">Backup Wallet</string>
        <string name="backup_des">Ensure Asset Safety</string>
        <string name="home_tx_show_role_des">Only show the recent 24 hours of transactions</string>
        <string name="ad_details">Details</string>
        <string name="tx_record_receivables">Receive</string>
        <string name="copy_address_text">Copy Address</string>
        <string name="save_pic_text">Save to album</string>
        <string name="support_token_title">NAS nano now supports the following tokens</string>
        <string name="support_token_content">All tokens share the same address</string>
        <string name="support_token">Tokens</string>
        <string name="i_got">OK</string>
        <string name="succ_save_pic_to_album">Image saved successfully</string>
        <string name="permission_denied_camera">No permission to access camera, please open permission in system settings</string>
        <string name="permission_denied_gallery">No permission to save image, please open permission in system settings</string>
        <string name="transfer_btn_text">Send</string>
        <string name="title_choose_token">Choose Token</string>
        <string name="hint_transfer_to">Destination Address</string>
        <string name="transfer_input_amount">Amount</string>
        <string name="gas">Gas Fee</string>
        <string name="transfer_adjust_gas">Adjust</string>
        <string name="standard_gas_fee">Standard</string>
        <string name="fast_gas_fee">Fast</string>
        <string name="transfer_gas_note">Gas is paid to the miners, not to NAS nano.</string>
        <string name="remarks">Memo(Optional)</string>
        <string name="confirm_transfer">Confirm</string>
        <string name="text_address">Address</string>
        <string name="transfer_amount_title">Amount</string>
        <string name="send_to_self_tips">You are transferring to your payment wallet, are you sure to continue?</string>
        <string name="insufficient_balance">Insufficient Balance</string>
        <string name="insufficient_gas">Insufficient Gas</string>
        <string name="wrong_address_content">Incorrect address format, please reenter</string>
        <string name="tip_invalid_number">Please enter valid number</string>
        <string name="tx_detail_title">Transaction Details</string>
        <string name="tx_detail_sender">From</string>
        <string name="tx_detail_receiver">To</string>
        <string name="text_me">Me</string>
        <string name="text_transfer_schedule">Transaction state</string>
        <string name="tx_detail_start">Start</string>
        <string name="tx_detail_process">Pending</string>
        <string name="tx_detail_finish">Finish</string>
        <string name="tx_detail_remark">Memo</string>
        <string name="tx_detail_remark_func">Func</string>
        <string name="tx_detail_remark_nothing">None</string>
        <string name="tx_detail_detail_text">Details</string>
        <string name="tx_detail_hash">Transaction No.</string>
        <string name="tx_detail_block_height">Block</string>
        <string name="tx_detail_copy_links">Copy URL</string>
        <string name="back_to_dapp">Back to DApp</string>
        <string name="text_qr_code">Scan QR Code</string>
        <string name="scan_code_tip">Auto-scan by putting the QR code in frame</string>
        <string name="from_album">Add from album</string>
        <string name="title_notifications">Me</string>
        <string name="token_with_first_upper_case">Tokens</string>
        <string name="wallet_with_first_upper_case">Wallets</string>
        <string name="me_amount">Amount</string>
        <string name="me_value">Value</string>
        <string name="me_backup_des">Backup this wallet for asset safety</string>
        <string name="me_backup_now">Backup Now ></string>
        <string name="wallet">Wallets</string>
        <string name="tx_records">Transactions</string>
        <string name="wallet_detail_tokens">Tokens</string>
        <string name="wallet_detail_transactions">Transactions</string>
        <string name="wallet_address">Address</string>
        <string name="wallet_detail_nothing">It\'s empty</string>
        <string name="wallet_setting_title">Wallet Settings</string>
        <string name="wallet_setting_basic_setting">Basic Settings</string>
        <string name="wallet_setting_rename_wallet">Rename Wallet</string>
        <string name="wallet_setting_change_pwd">Change Password</string>
        <string name="wallet_setting_backup">Backup wallet</string>
        <string name="wallet_setting_mnemonic">Mnemonic Words</string>
        <string name="wallet_setting_keystore">Keystore</string>
        <string name="wallet_setting_plain_priv">Private Key</string>
        <string name="wallet_setting_no_safe_tips">High Risk</string>
        <string name="wallet_setting_del_wallet_btn">Remove wallet</string>
        <string name="modify_wallet_name">Rename Wallet</string>
        <string name="single_input_hint">At most 20 characters</string>
        <string name="tip_wallet_name_exists">The wallet name already exists</string>
        <string name="change_pwd_title">Change Password</string>
        <string name="change_pwd_type_remember_pwd">I know my current password</string>
        <string name="change_pwd_old_pwd_title">Please input current password</string>
        <string name="change_pwd_new_pwd_title">Please input new password</string>
        <string name="use_complex_pwd">Use complex password ></string>
        <string name="use_simple_pwd">Use simple password ></string>
        <string name="complex_pwd_hint">No less than 6 characters, Case sensitive</string>
        <string name="password_strength_short">Weak</string>
        <string name="password_strength_medium">Normal</string>
        <string name="password_strength_strong">Strong</string>
        <string name="title_confirm_password">Confirm Password</string>
        <string name="change_pwd_next_step">Next</string>
        <string name="wrong_pwd">Password incorrect, re-entry</string>
        <string name="pwd_need_upper_six">No less than 6  characters</string>
        <string name="change_wallet_pwd_success">Reset password successfully</string>
        <string name="change_pwd_type_forgot_pwd">I\'ve forgotten my current password</string>
        <string name="verify_account">Re-import</string>
        <string name="reimport_from_mnemonic">Mnemonic Words</string>
        <string name="start_import">Start Import</string>
        <string name="set_pwd_title">Set Password</string>
        <string name="reset_pwd_main_title">Confirm Password</string>
        <string name="reset_pwd_sub_title">Please input password again</string>
        <string name="pwd_not_match">Passwords don\'t match! Please try again</string>
        <string name="import_from_keystore">Keystore</string>
        <string name="import_from_keystore_des">Strings</string>
        <string name="text_subtitle_for_import_from_keystore">Please do not take screenshots or record the screen when importing.</string>
        <string name="keystore_content">Please input Keystore</string>
        <string name="keystore_pwd">Please input password</string>
        <string name="wrong_keyjson">Please input correct Keystore and password</string>
        <string name="paste_remind_keystore">The Keystore has been pasted. Recommend clearing the clipboard to ensure asset safety</string>
        <string name="input_plain_priv_text">Please input Private Key</string>
        <string name="show_plain_priv_key">Show Private Key</string>
        <string name="hide_plain_priv_key">Hide Private Key</string>
        <string name="alert_tips">Tips</string>
        <string name="paste_remind">The Private Key has been pasted. Recommend clearing the clipboard to ensure asset safety</string>
        <string name="not_now">Not Now</string>
        <string name="clear_now">Clear Now</string>
        <string name="tip_clear_success">Clear successful</string>
        <string name="wrong_privatekey_content">Please input correct Private Key</string>
        <string name="wallet_backup_mnemonic_title">Backup Mnemonic Words</string>
        <string name="wallet_backup_offline">Why backup offline</string>
        <string name="wallet_backup_btn">OK, Backup Now</string>
        <string name="wallet_backup_pwd_title">Password</string>
        <string name="wallet_backup_detail_des_mnemonic">Write down your Mnemonic Words</string>
        <string name="wallet_backup_detail_mnemonic_next">Next</string>
        <string name="wallet_backup_mnemonic_failed">Input Mnemonic Words in the right order</string>
        <string name="wallet_backup_mnemonic_tips_hint">Click the following words in order</string>
        <string name="wallet_backup_mnemonic_confirm">Confirm</string>
        <string name="wallet_backup_mnemonic_success">Backup successful</string>
        <string name="wallet_backup_mnemonic_del_tips">We\'ll delete Mnemonic Words from local to ensure your asset safety</string>
        <string name="wallet_backup_mnemonic_del_btn">OK, Clear Now</string>
        <string name="wallet_backup_keystore_sub_title">Clear clipboard after backup</string>
        <string name="wallet_backup_keystore_course">Tips</string>
        <string name="wallet_backup_keystore_course_content">1. Please backup offline, like writing it down on paper or saving it in U disk and place at a safe place;\n2. Please do not download any displayed photos and images online.</string>
        <string name="wallet_backup_detail_safe_tips_k_s">Make sure your environment is secure and no one can see your screen.</string>
        <string name="wallet_backup_detail_copy_keystore">Copy Keystore</string>
        <string name="import_from_plain_priv">Private Key (High Risk)</string>
        <string name="agree_text">Agree to</string>
        <string name="and">&#160;&amp;&#160;</string>
        <string name="cancel_btn">Cancel</string>
        <string name="protocol">&#160;User Privacy</string>
        <string name="service_protocol">Terms of Service</string>
        <string name="wallet_backup_detail_tips1">Notice</string>
        <string name="wallet_backup_detail_tips2">Please do not download any displayed photos and images, or your asset may loss.</string>
        <string name="import_pri_key_sub_title_des">Once the private key lost, your assets will be dangerous. Please do not take screenshots or record the screen.</string>
        <string name="swap_text_introduction_desc">NAS nano now supports tokens swap!</string>
        <string name="swap_text_introduction_desc_1">1. ERC 20 tokens are your asset, but cannot be used on mainnet transaction.</string>
        <string name="swap_text_introduction_desc_2">2. How to tell: Nebulas mainnet NAS address begins with "n1", while ERC 20 tokens address begins with "0x".</string>
        <string name="swap_text_introduction_desc_3">3. Other tokens swap methods: Huobi, gate.io or other exchanges.</string>
        <string name="swap_action_give_up">Swap later</string>
        <string name="swap_action_start">Swap now</string>
        <string name="tip_title_please_verify_fingerprint">Please scan your fingerprint</string>
        <string name="text_verify_fingerprint_to_unlock">Verify fingerprint to unlock the application</string>
        <string name="action_to_verify_wallet_password_short">Password</string>
</resources>