<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:focusableInTouchMode="true"
              android:orientation="vertical"
              tools:context="io.nebulas.wallet.android.module.wallet.create.ImportFromPlainPrivActivity">


        <include
                android:id="@+id/toolbar_layout"
                layout="@layout/app_bar_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical">

                <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="18dp"
                        android:layout_marginRight="18dp"
                        android:fitsSystemWindows="true">

                        <TextView
                                android:id="@+id/desTV"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="23dp"
                                android:gravity="center_horizontal"
                                android:text="@string/import_from_plain_priv"
                                android:textColor="@color/color_202020"
                                android:textSize="20sp"
                                android:textStyle="bold"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintRight_toRightOf="parent"
                                app:layout_constraintTop_toTopOf="parent"/>

                        <TextView
                                android:id="@+id/subDesTV"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:text="@string/import_pri_key_sub_title_des"
                                android:textColor="@color/color_8F8F8F"
                                android:textSize="15sp"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintRight_toRightOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/desTV"/>


                        <io.nebulas.wallet.android.view.ListenActionEditText
                                android:id="@+id/plainPrivET"
                                android:layout_width="0dp"
                                android:layout_height="204dp"
                                android:layout_marginTop="22dp"
                                android:background="@drawable/keystore_import_bg"
                                android:gravity="top|right|start"
                                android:hint="@string/input_plain_priv_text"
                                android:padding="18dp"
                                android:textColor="@color/color_8F8F8F"
                                android:textSize="15sp"
                                android:tag="@string/paste_remind"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintRight_toRightOf="parent"
                                app:layout_constraintTop_toBottomOf="@id/subDesTV"/>


                        <io.nebulas.wallet.android.view.DrawableTextView
                                android:id="@+id/showPlainPrivET"
                                android:layout_width="0dp"
                                android:layout_height="48dp"
                                android:layout_marginTop="18dp"
                                android:background="@drawable/show_pri_key_bg"
                                android:drawablePadding="12dp"
                                android:text="@string/show_plain_priv_key"
                                android:textColor="@color/color_FF8F00"
                                android:textSize="17sp"
                                android:gravity="center_vertical"
                                android:drawableStart="@mipmap/open_eye_yellow"
                                app:layout_constraintLeft_toLeftOf="@+id/plainPrivET"
                                app:layout_constraintRight_toRightOf="@+id/plainPrivET"
                                app:layout_constraintTop_toBottomOf="@+id/plainPrivET"/>

                        <LinearLayout
                                android:id="@+id/agree_layout"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="55dp"
                                android:gravity="center_horizontal"
                                android:orientation="vertical"
                                app:layout_constraintTop_toBottomOf="@+id/showPlainPrivET">

                                <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:gravity="center"
                                        android:orientation="horizontal">

                                        <android.support.v7.widget.AppCompatCheckBox
                                                android:id="@+id/agreeCB"
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:text="@string/agree_text"
                                                android:textColor="@color/color_8F8F8F"
                                                android:textSize="14sp"
                                                android:theme="@style/CheckboxStyle"/>

                                        <TextView
                                                android:id="@+id/privacyTV"
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:text="@string/protocol"
                                                android:textColor="@color/color_038AFB"
                                                android:textSize="14sp"/>

                                </LinearLayout>

                                <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:gravity="center"
                                        android:orientation="horizontal">

                                        <TextView
                                                android:id="@+id/text_and"
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:layout_gravity="center_vertical"
                                                android:text="@string/and"
                                                android:textColor="@color/color_8F8F8F"
                                                android:textSize="14sp"/>

                                        <TextView
                                                android:id="@+id/serviceProtocolTV"
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:layout_gravity="center_vertical"
                                                android:text="@string/service_protocol"
                                                android:textColor="@color/color_038AFB"
                                                android:textSize="14sp"/>

                                </LinearLayout>
                        </LinearLayout>


                        <TextView
                                android:id="@+id/importBtn"
                                android:layout_width="0dp"
                                android:layout_height="48dp"
                                android:layout_marginTop="24dp"
                                android:background="@drawable/btn_import_disable_bg"
                                android:clickable="false"
                                android:text="@string/start_import"
                                android:textColor="@color/white"
                                android:textSize="15sp"
                                android:textStyle="bold"
                                app:layout_constraintLeft_toLeftOf="parent"
                                android:gravity="center"
                                app:layout_constraintRight_toRightOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/agree_layout"/>


                        <include
                                android:id="@+id/progressBar"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                layout="@layout/loading_view_with_bg"
                                android:visibility="gone"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintRight_toRightOf="parent"/>

                </android.support.constraint.ConstraintLayout>
        </ScrollView>
</LinearLayout>