<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <io.nebulas.wallet.android.view.DrawableTextView
                android:id="@+id/copyKeystore"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginTop="18dp"
                android:background="@drawable/selector_for_btn_import_wallet"
                android:drawableLeft="@drawable/keystore_img"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:text="@string/wallet_backup_detail_copy_keystore"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/keystoreShowOrHide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="30dp"
                android:textColor="@color/color_FF8F00"
                android:textSize="15sp"
                app:layout_constraintLeft_toLeftOf="@id/copyKeystore"
                app:layout_constraintRight_toRightOf="@+id/copyKeystore"
                app:layout_constraintTop_toBottomOf="@+id/copyKeystore" />

        <TextView
                android:id="@+id/keystore_tips1_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:text="@string/wallet_backup_detail_tips1"
                android:visibility="gone"
                android:textColor="@color/color_202020"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="@id/copyKeystore"
                app:layout_constraintTop_toBottomOf="@+id/keystoreShowOrHide" />

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/wallet_backup_detail_tips2"
                android:textColor="@color/color_8F8F8F"
                android:textSize="13sp"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="@+id/copyKeystore"
                app:layout_constraintRight_toRightOf="@+id/copyKeystore"
                app:layout_constraintTop_toBottomOf="@+id/keystore_tips1_tv" />

</android.support.constraint.ConstraintLayout>